# fund-assistant

./: .gitignore  README.md  SKILL.md  pyproject.toml
fund_assistant/: __init__.py  __main__.py  cli.py
fund_assistant/api/: __init__.py  base.py  tiantian.py
fund_assistant/data/: funds.json
fund_assistant/models/: __init__.py  enums.py  fund.py
fund_assistant/services/: __init__.py  fund_service.py
fund_assistant/ui/: __init__.py  formatter.py
